--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 rel="stylesheet">
   </head>
   <body>
-    <header>
+    <!-- header -->
+    <header class="site-header">
+      <div class="container">
       <h2>
         <a class="logo" href="index.html">
           <span class="first-webstudio">Web</span><span class="second-webstudio-header">Studio</span> 
@@ -32,8 +34,9 @@ rel="stylesheet">
         <li><a class="contact-phone" href="tel:+48111111111">+48 111 111 111</a></li>
       </ul>
       </div>
+      </div>
     </header>
-    <main>
+    <main class="container">
       <section>
         <h1 class="header">efektywne rozwiązania dla waszego biznesu</h1>
         
@@ -155,7 +158,7 @@ rel="stylesheet">
         </ul>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer container">
       <h2>
         <a class="logo" href="index.html">
           <span class="first-webstudio">Web</span><span class="second-webstudio-footer">Studio</span> 
