--- a/index.html
+++ b/index.html
@@ -127,94 +127,102 @@
             </ul>
           </div>
         </section>
-        <section class="team container">
-          <h2 class="team-header">nasz zespół</h2>
-          <ul class="team-list">
-            <li class="team-item">
-              <figure>
-                <img
-                  class="team-image"
-                  src="images/product_designer.jpg"
-                  alt="product designer"
-                  width="270"
-                  height="260"
-                />
-                <figcaption>
-                  <h3 class="team-name">john doe</h3>
-                  <p class="team-job">product designer</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li class="team-item">
-              <figure>
-                <img
-                  class="team-image"
-                  src="images/frontend_developer.jpg"
-                  alt="frontend developer"
-                  width="270"
-                  height="260"
-                />
-                <figcaption>
-                  <h3 class="team-name">john doe</h3>
-                  <p class="team-job">frontend developer</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li class="team-item">
-              <figure>
-                <img
-                  class="team-image"
-                  src="images/marketing.jpg"
-                  alt="marketing"
-                  width="270"
-                  height="260"
-                />
-                <figcaption>
-                  <h3 class="team-name">john doe</h3>
-                  <p class="team-job">marketing</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li class="team-item">
-              <figure>
-                <img
-                  class="team-image"
-                  src="images/ui_designer.jpg"
-                  alt="ui designer"
-                  width="270"
-                  height="260"
-                />
-                <figcaption>
-                  <h3 class="team-name">john doe</h3>
-                  <p class="team-job">ui designer</p>
-                </figcaption>
-              </figure>
-            </li>
-          </ul>
-        </section>
+        <div class="team">
+          <section class="container">
+            <h2 class="team-header">nasz zespół</h2>
+            <ul class="team-list">
+              <li class="team-item">
+                <figure class="team-image">
+                  <img
+                    class="team-image"
+                    src="images/product_designer.jpg"
+                    alt="product designer"
+                    width="270"
+                    height="260"
+                  />
+                  <figcaption>
+                    <h3 class="team-name">john doe</h3>
+                    <p class="team-job">product designer</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="team-item">
+                <figure class="team-image">
+                  <img
+                    class="team-image"
+                    src="images/frontend_developer.jpg"
+                    alt="frontend developer"
+                    width="270"
+                    height="260"
+                  />
+                  <figcaption>
+                    <h3 class="team-name">john doe</h3>
+                    <p class="team-job">frontend developer</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="team-item">
+                <figure class="team-image">
+                  <img
+                    class="team-image"
+                    src="images/marketing.jpg"
+                    alt="marketing"
+                    width="270"
+                    height="260"
+                  />
+                  <figcaption>
+                    <h3 class="team-name">john doe</h3>
+                    <p class="team-job">marketing</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="team-item">
+                <figure class="team-image">
+                  <img
+                    class="team-image"
+                    src="images/ui_designer.jpg"
+                    alt="ui designer"
+                    width="270"
+                    height="260"
+                  />
+                  <figcaption>
+                    <h3 class="team-name">john doe</h3>
+                    <p class="team-job">ui designer</p>
+                  </figcaption>
+                </figure>
+              </li>
+            </ul>
+          </section>
+        </div>
       </main>
-      <footer class="footer container">
-        <h2>
-          <a class="logo" href="index.html">
-            <span class="first-webstudio">Web</span
-            ><span class="second-webstudio-footer">Studio</span>
-          </a>
-        </h2>
+      <div class="footer-background">
+        <footer class="footer container">
+          <h2>
+            <a class="logo" href="index.html">
+              <span class="first-webstudio">Web</span
+              ><span class="second-webstudio-footer">Studio</span>
+            </a>
+          </h2>
 
-        <address class="footer-links">
-          <ul class="footer-list">
-            <li><p class="address">m. warszawa, aleje jerozolimskie 21</p></li>
-            <li>
-              <a class="footer-link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li>
-              <a class="footer-link" href="tel:+48111111111">+48 111 111 111</a>
-            </li>
-          </ul>
-        </address>
-      </footer>
+          <address class="footer-links">
+            <ul class="footer-list">
+              <li>
+                <p class="address">m. warszawa, aleje jerozolimskie 21</p>
+              </li>
+              <li>
+                <a class="footer-link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li>
+                <a class="footer-link" href="tel:+48111111111"
+                  >+48 111 111 111</a
+                >
+              </li>
+            </ul>
+          </address>
+        </footer>
+      </div>
     </div>
   </body>
 </html>
