--- a/index.html
+++ b/index.html
@@ -21,17 +21,16 @@
     />
   </head>
   <body>
-    <div class="main-page">
       <!-- header -->
       <header class="site-header">
         <div class="container flex-header">
           <div class="logo-links">
-            <h2>
+            
               <a class="logo" href="index.html">
                 <span class="first-webstudio">Web</span
                 ><span class="second-webstudio-header">Studio</span>
               </a>
-            </h2>
+            
             <nav>
               <ul class="header-links">
                 <li><a class="header-link" href="/agencja">agencja</a></li>
@@ -127,7 +126,7 @@
             </ul>
           </div>
         </section>
-        <div class="team">
+        <div class="team section">
           <section class="container">
             <h2 class="team-header">nasz zespół</h2>
             <ul class="team-list">
@@ -223,6 +222,5 @@
           </address>
         </footer>
       </div>
-    </div>
   </body>
 </html>
