--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,8 @@
         </div>
       </header>
     <main>
-      <section class="container">
+      <section>
+        <div class="container">
         <ul class="header-navigation">
           <li>
             <input class="filter-button" type="button" value="wszystkie" />
@@ -70,8 +71,10 @@
             <input class="filter-button" type="button" value="marketing" />
           </li>
         </ul>
+        </div>
       </section>
-      <section class="projects container">
+      <section class="projects">
+        <div class="container">
         <ul class="projects-list">
           <li class="projects-item">
             <figure class="projects-photo">
@@ -200,6 +203,7 @@
             </figure>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <div class="footer-background">
