--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
       </header>
       <main>
         <section class="dark-bg">
-          <div class="header-and-button">
+          <div class="header-and-button container">
             <h1 class="header">efektywne rozwiązania dla waszego biznesu</h1>
             <input class="main-button" type="button" value="zamów usługę" />
           </div>
         </section>
         <section>
-          <ul class="container text-list">
+          <div class="container">
+          <ul class="text-list">
             <li class="whole-text">
               <h2 class="text-title">lorem ipsum</h2>
               <p class="text-description">
@@ -93,9 +94,10 @@
               </p>
             </li>
           </ul>
+          </div>
         </section>
-        <section class="container">
-          <div class="photos-about">
+        <section>
+          <div class="photos-about container">
             <h2 class="header-about">czym się zajmujemy</h2>
 
             <ul class="photos-list">
@@ -126,8 +128,8 @@
             </ul>
           </div>
         </section>
-        <div class="team section">
-          <section class="container">
+          <section class="team section">
+            <div class="container">
             <h2 class="team-header">nasz zespół</h2>
             <ul class="team-list">
               <li class="team-item">
@@ -191,11 +193,12 @@
                 </figure>
               </li>
             </ul>
+            </div>
           </section>
-        </div>
       </main>
       <div class="footer-background">
-        <footer class="footer container">
+        <footer class="footer">
+          <div class="container">
           <h2>
             <a class="logo" href="index.html">
               <span class="first-webstudio">Web</span
@@ -220,6 +223,7 @@
               </li>
             </ul>
           </address>
+          </div>
         </footer>
       </div>
   </body>
