--- a/portfolio.html
+++ b/portfolio.html
@@ -85,8 +85,8 @@
                 alt="Technocrack"
               />
               <figcaption class="projects-description">
-                <h3>Technocrack</h3>
-                <span>Strona internetowa</span>
+                <h3 class="projects-title">Technocrack</h3>
+                <span class="projects-category">Strona internetowa</span>
               </figcaption>
             </figure>
           </li>
@@ -99,8 +99,8 @@
                 alt="grafika new orlean vs golden star"
               />
               <figcaption class="projects-description">
-                <h3>grafika new orlean vs golden star</h3>
-                <span>dizajn</span>
+                <h3 class="projects-title">grafika new orlean vs golden star</h3>
+                <span class="projects-category">dizajn</span>
               </figcaption>
             </figure>
           </li>
@@ -113,8 +113,8 @@
                 alt="restauracja seafood"
               />
               <figcaption class="projects-description">
-                <h3>restauracja seafood</h3>
-                <span>aplikacja</span>
+                <h3 class="projects-title">restauracja seafood</h3>
+                <span class="projects-category">aplikacja</span>
               </figcaption>
             </figure>
           </li>
@@ -127,8 +127,8 @@
                 alt="projekt prime"
               />
               <figcaption class="projects-description">
-                <h3>projekt prime</h3>
-                <span>marketing</span>
+                <h3 class="projects-title">projekt prime</h3>
+                <span class="projects-category">marketing</span>
               </figcaption>
             </figure>
           </li>
@@ -141,8 +141,8 @@
                 alt="projekt boxes"
               />
               <figcaption class="projects-description">
-                <h3>projekt boxes</h3>
-                <span>aplikacja</span>
+                <h3 class="projects-title">projekt boxes</h3>
+                <span class="projects-category">aplikacja</span>
               </figcaption>
             </figure>
           </li>
@@ -155,8 +155,8 @@
                 alt="inspiration has no borders"
               />
               <figcaption class="projects-description">
-                <h3>inspiration has no borders</h3>
-                <span>strona internetowa</span>
+                <h3 class="projects-title">inspiration has no borders</h3>
+                <span class="projects-category">strona internetowa</span>
               </figcaption>
             </figure>
           </li>
@@ -169,8 +169,8 @@
                 alt="magazyn limited edition"
               />
               <figcaption class="projects-description">
-                <h3>magazyn limited edition</h3>
-                <span>dizajn</span>
+                <h3 class="projects-title">magazyn limited edition</h3>
+                <span class="projects-category">dizajn</span>
               </figcaption>
             </figure>
           </li>
@@ -183,8 +183,8 @@
                 alt="projekt lab"
               />
               <figcaption class="projects-description">
-                <h3>projekt lab</h3>
-                <span>marketing</span>
+                <h3 class="projects-title">projekt lab</h3>
+                <span class="projects-category">marketing</span>
               </figcaption>
             </figure>
           </li>
@@ -197,8 +197,8 @@
                 alt="growing business"
               />
               <figcaption class="projects-description">
-                <h3>growing business</h3>
-                <span>aplikacja</span>
+                <h3 class="projects-title">growing business</h3>
+                <span class="projects-category">aplikacja</span>
               </figcaption>
             </figure>
           </li>
